--- a/src/pug/components/basket/_data.pug
+++ b/src/pug/components/basket/_data.pug
@@ -1,72 +1,73 @@
-.basket__row.basket__row-2.basket__row--data
-  form.c-form.basket__data
-    .basket__data-col.basket__data-col--0
-      .basket__data-cover.basket__data-cover--0
-        .c-form__group.c-form__group--input
-          .c-form__group-col.c-form__group-col-0
-            .c-form__field.c-form__field--input
-              .c-form__input-wrapper
-                input.c-form__input(type="text" name="" placeholder="Imię" form-focus-js)
+.c-grid
+  .basket__row.basket__row-2.basket__row--data
+    form.c-form.basket__data
+      .basket__data-col.basket__data-col--0
+        .basket__data-cover.basket__data-cover--0
+          .c-form__group.c-form__group--input
+            .c-form__group-col.c-form__group-col-0
+              .c-form__field.c-form__field--input
+                .c-form__input-wrapper
+                  input.c-form__input(type="text" name="" placeholder="Imię" form-focus-js)
 
-          .c-form__group-col.c-form__group-col-1
-            .c-form__field.c-form__field--input
-              .c-form__input-wrapper
-                input.c-form__input(type="text" name="" placeholder="Nazwisko" form-focus-js)
+            .c-form__group-col.c-form__group-col-1
+              .c-form__field.c-form__field--input
+                .c-form__input-wrapper
+                  input.c-form__input(type="text" name="" placeholder="Nazwisko" form-focus-js)
 
-      .basket__data-cover.basket__data-cover--1
-        .c-form__field.c-form__field--input
-          .c-form__input-wrapper
-            input.c-form__input(type="text" name="" placeholder="Nazwa firmy (opcjonalnie)" form-focus-js)
+        .basket__data-cover.basket__data-cover--1
+          .c-form__field.c-form__field--input
+            .c-form__input-wrapper
+              input.c-form__input(type="text" name="" placeholder="Nazwa firmy (opcjonalnie)" form-focus-js)
 
-      .basket__data-cover.basket__data-cover--2
-        .c-form__group.c-form__group--input
-          .c-form__group-col.c-form__group-col-0
-            .c-form__field.c-form__field--input
-              .c-form__input-wrapper
-                input.c-form__input(type="text" name="" placeholder="Ulica" form-focus-js)
+        .basket__data-cover.basket__data-cover--2
+          .c-form__group.c-form__group--input
+            .c-form__group-col.c-form__group-col-0
+              .c-form__field.c-form__field--input
+                .c-form__input-wrapper
+                  input.c-form__input(type="text" name="" placeholder="Ulica" form-focus-js)
 
-          .c-form__group-col.c-form__group-col-1
-            .c-form__field.c-form__field--input
-              .c-form__input-wrapper
-                input.c-form__input(type="text" name="" placeholder="Numer domu" form-focus-js)
+            .c-form__group-col.c-form__group-col-1
+              .c-form__field.c-form__field--input
+                .c-form__input-wrapper
+                  input.c-form__input(type="text" name="" placeholder="Numer domu" form-focus-js)
 
-          .c-form__group-col.c-form__group-col-2
-            .c-form__field.c-form__field--input
-              .c-form__input-wrapper
-                input.c-form__input(type="text" name="" placeholder="Numer mieszkania" form-focus-js)
+            .c-form__group-col.c-form__group-col-2
+              .c-form__field.c-form__field--input
+                .c-form__input-wrapper
+                  input.c-form__input(type="text" name="" placeholder="Numer mieszkania" form-focus-js)
 
-      .basket__data-cover.basket__data-cover--3
-        .c-form__group.c-form__group--input
-          .c-form__group-col.c-form__group-col-0
-            .c-form__field.c-form__field--input
-              .c-form__input-wrapper
-                input.c-form__input(type="text" name="" placeholder="Ulica" form-focus-js)
+        .basket__data-cover.basket__data-cover--3
+          .c-form__group.c-form__group--input
+            .c-form__group-col.c-form__group-col-0
+              .c-form__field.c-form__field--input
+                .c-form__input-wrapper
+                  input.c-form__input(type="text" name="" placeholder="Ulica" form-focus-js)
 
-          .c-form__group-col.c-form__group-col-1
-            .c-form__field.c-form__field--input
-              .c-form__input-wrapper
-                input.c-form__input(type="text" name="" placeholder="Numer domu" form-focus-js)
+            .c-form__group-col.c-form__group-col-1
+              .c-form__field.c-form__field--input
+                .c-form__input-wrapper
+                  input.c-form__input(type="text" name="" placeholder="Numer domu" form-focus-js)
 
-          .c-form__group-col.c-form__group-col-2
-            .c-form__field.c-form__field--input
-              .c-form__input-wrapper
-                input.c-form__input(type="text" name="" placeholder="Numer mieszkania" form-focus-js)
+            .c-form__group-col.c-form__group-col-2
+              .c-form__field.c-form__field--input
+                .c-form__input-wrapper
+                  input.c-form__input(type="text" name="" placeholder="Numer mieszkania" form-focus-js)
 
-      .basket__data-cover.basket__data-cover--4
-        .c-form__field.c-form__field--checkbox
-          .c-form__checkbox-wrapper
-            input.c-form__checkbox(
-              type="checkbox"
-              id!= "checkbox"
-              name!= "checkbox"
-              class!= ""
-              value!= ""
-            )
+        .basket__data-cover.basket__data-cover--4
+          .c-form__field.c-form__field--checkbox
+            .c-form__checkbox-wrapper
+              input.c-form__checkbox(
+                type="checkbox"
+                id!= "checkbox"
+                name!= "checkbox"
+                class!= ""
+                value!= ""
+              )
 
-            label.c-form__checkbox-content(for!= "checkbox")
-              .c-form__checkbox-icon
-                i
-              span.c-form__checkbox-text!= "Wyrażam zgodę na przetwarzanie moich danych osobowych w celu rekrutacji zgodnie z art. 6 ust. 1 lit. a Rozporządzenia Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 r. w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie swobodnego przepływu takich danych oraz uchylenia dyrektywy 95/46/WE (ogólne rozporządzenie o ochronie danych) <span>*</span>"
+              label.c-form__checkbox-content(for!= "checkbox")
+                .c-form__checkbox-icon
+                  i
+                span.c-form__checkbox-text!= "Wyrażam zgodę na przetwarzanie moich danych osobowych w celu rekrutacji zgodnie z art. 6 ust. 1 lit. a Rozporządzenia Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 r. w sprawie ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie swobodnego przepływu takich danych oraz uchylenia dyrektywy 95/46/WE (ogólne rozporządzenie o ochronie danych) <span>*</span>"
 
-    .basket__data-col.basket__data-col--1
-      button.basket__btn(type="submit")!= "Następny krok"
+      .basket__data-col.basket__data-col--1
+        button.basket__btn(type="submit")!= "Następny krok"
