Basket - create card box section - full adaptive.

--- a/src/pug/components/basket/_tabs.pug
+++ b/src/pug/components/basket/_tabs.pug
@@ -20,6 +20,8 @@
 
 .c-grid
   .basket__row.basket__row-0.basket__row--tabs
+    a.basket__link(href="#" class="" title="")!= "← Wróc do zakupów"
+
     .basket__tabs
       ul.basket__tabs-list
         each val, idx in basketTabsData
